@@ -1,3 +1,7 @@
+2005-10-27  Derek Price  <derek@ximbiot.com>
+
+	* base64.m4: New file from GNULIB.
+
 2005-10-20  Derek Price  <derek@ximbiot.com>
 
 	Update from GNULIB.
